# secrets-vault

./: .secrets.toml.example  AGENT_SECRET_LIFECYCLE.md  APPROVAL_PROTOCOL.md  BROKER_PROTOCOL.md  CLAUDE.md  Cargo.toml  PHONE_2FA_PROTOCOL.md  QVLT2_SPEC.md  README.md  SUMMARY.md  findings.md  secrets.entitlements  sign.sh
.cve_feeds/: rustsec_advisories.json
src/: backend.rs  gsm.rs  inbox.rs  keychain.rs  lib.rs  main.rs  registry.rs  session.rs
tests/: masked_set.exp  masked_set.sh
